Closed Bug 1232046 Opened 10 years ago Closed 10 years ago

Small videos with low framerate may fail to send over peerconnection

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox46 --- fixed

People

(Reporter: pehrsons, Assigned: pehrsons)

References

()

Details

Attachments

(1 file, 1 obsolete file)

When a video track sent over a peerconnection changes resolution we reconfigure the encoder. If the video has recently had a very low framerate and the new resolution is low enough, we might be telling the encoder to use a minimum bitrate that is lower than a constant value defined by webrtc.org code. In the fiddle at [1] we can reproduce this. Run per the below to see the error logged: > NSPR_LOG_MODULES=webrtc_trace:65535 WEBRTC_TRACE_FILE=nspr ./mach run [1] http://jsfiddle.net/ot29yhy4/
Assignee: nobody → pehrsons
Status: NEW → ASSIGNED
Attachment #8697697 - Flags: review?(rjesup)
Attachment #8697697 - Flags: review?(rjesup) → review+
backlog: --- → webrtc/webaudio+
Rank: 15
Keywords: checkin-needed
Priority: -- → P1
Hi, this failed to apply: renamed 1232046 -> 0001-Bug-1232046-Do-not-set-a-too-low-send-bitrate-in-Vid.patch applying 0001-Bug-1232046-Do-not-set-a-too-low-send-bitrate-in-Vid.patch patching file media/webrtc/signaling/src/media-conduit/VideoConduit.cpp Hunk #2 FAILED at 1017 1 out of 2 hunks FAILED -- saving rejects to file media/webrtc/signaling/src/media-conduit/VideoConduit.cpp.rej patch failed, unable to continue (try -v) patch failed, rejects left in working directory errors during apply, please fix and qrefresh 0001-Bug-1232046-Do-not-set-a-too-low-send-bitrate-in-Vid.patch
Flags: needinfo?(pehrsons)
Rebased on current m-c. Carries forward r=jesup.
Attachment #8697697 - Attachment is obsolete: true
Flags: needinfo?(pehrsons)
Attachment #8700891 - Flags: review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: