Bug 1232046 - Do not set a too low send bitrate in VideoConduit. r=jesup